Reorg e correção testes